force-app/main/default/objects/Project_Proposal__c/Project_Proposal__c.object-meta.xml
<CustomObject>
    <label>Project Proposal</label>
    <nameField>
        <label>Project Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Project Proposals</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>