force-app/main/default/objects/Project_Proposal__c/fields/Additional_ethics_required__c.field-meta.xml
<CustomField>
    <fullName>Additional_ethics_required__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Apart from ethics linked directly to this proposal, are any other ethics applications or approvals required for the proposed research?</inlineHelpText>
    <label>Additional ethics required</label>
    <type>Checkbox</type>
</CustomField>