force-app/main/default/objects/Project_Proposal__c/fields/AEC_Additional_Approved__c.field-meta.xml
<CustomField>
    <fullName>AEC_Additional_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional AEC approval required?</label>
    <type>Checkbox</type>
</CustomField>