force-app/main/default/objects/Project_Proposal__c/fields/AEC_Approved__c.field-meta.xml
<CustomField>
    <fullName>AEC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing AEC approval?</label>
    <type>Checkbox</type>
</CustomField>