force-app/main/default/objects/Project_Proposal__c/fields/AEC_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>AEC_Approved_Date__c</fullName>
    <label>Date by when AEC approval is required?</label>
    <type>Date</type>
</CustomField>