force-app/main/default/objects/Project_Proposal__c/fields/Allow_Updates_on_Approval__c.field-meta.xml
<CustomField>
    <fullName>Allow_Updates_on_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Allow Updates on Approval</label>
    <type>Checkbox</type>
</CustomField>