force-app/main/default/objects/Project_Proposal__c/fields/Already_Submitted__c.field-meta.xml
<CustomField>
    <fullName>Already_Submitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Already Submitted</label>
    <type>Checkbox</type>
</CustomField>