force-app/main/default/objects/Project_Proposal__c/fields/Approval_Complete__c.field-meta.xml
<CustomField>
    <fullName>Approval_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Complete</label>
    <type>Checkbox</type>
</CustomField>