force-app/main/default/objects/Project_Proposal__c/fields/Approval_Request_ID__c.field-meta.xml
<CustomField>
    <fullName>Approval_Request_ID__c</fullName>
    <label>Approval Request ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>