force-app/main/default/objects/Project_Proposal__c/fields/ApprovalRequeslinkURL__c.field-meta.xml
<CustomField>
    <fullName>ApprovalRequeslinkURL__c</fullName>
    <label>ApprovalRequeslinkURL</label>
    <type>Url</type>
</CustomField>