force-app/main/default/objects/Project_Proposal__c/fields/BIO_Additional_Approval__c.field-meta.xml
<CustomField>
    <fullName>BIO_Additional_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional BIO approval required?</label>
    <type>Checkbox</type>
</CustomField>