force-app/main/default/objects/Project_Proposal__c/fields/BIO_Approved__c.field-meta.xml
<CustomField>
    <fullName>BIO_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing BIO approval?</label>
    <type>Checkbox</type>
</CustomField>