force-app/main/default/objects/Project_Proposal__c/fields/BIO_Date__c.field-meta.xml
<CustomField>
    <fullName>BIO_Date__c</fullName>
    <label>Date by when BIO approval is required?</label>
    <type>Date</type>
</CustomField>