force-app/main/default/objects/Project_Proposal__c/fields/CC_SEO_Primary_Count__c.field-meta.xml
<CustomField>
    <fullName>CC_SEO_Primary_Count__c</fullName>
    <label>CC SEO Primary Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>