force-app/main/default/objects/Project_Proposal__c/fields/CC_TOA_Count__c.field-meta.xml
<CustomField>
    <fullName>CC_TOA_Count__c</fullName>
    <label>CC TOA Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>