force-app/main/default/objects/Project_Proposal__c/fields/Classification_Code_Count_Primary__c.field-meta.xml
<CustomField>
    <fullName>Classification_Code_Count_Primary__c</fullName>
    <label>Classification Code Count: Primary</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>