force-app/main/default/objects/Project_Proposal__c/fields/Classification_Code_Percentage_Total__c.field-meta.xml
<CustomField>
    <fullName>Classification_Code_Percentage_Total__c</fullName>
    <label>Classification Code Percentage Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>