force-app/main/default/objects/Project_Proposal__c/fields/Closure_Comment__c.field-meta.xml
<CustomField>
    <fullName>Closure_Comment__c</fullName>
    <label>Closure Comment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>