force-app/main/default/objects/Project_Proposal__c/fields/Conditional_Approval__c.field-meta.xml
<CustomField>
    <fullName>Conditional_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conditional Approval</label>
    <type>Checkbox</type>
</CustomField>