force-app/main/default/objects/Project_Proposal__c/fields/Count_Non_Overdue_Open_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Count_Non_Overdue_Open_Milestones__c</fullName>
    <label>Count - Non Overdue Open Milestone Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>