force-app/main/default/objects/Project_Proposal__c/fields/Count_of_Linked_Ethics_Requests_Hum__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Linked_Ethics_Requests_Hum__c</fullName>
    <label>Count of Linked Ethics Requests Human</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>