force-app/main/default/objects/Project_Proposal__c/fields/Display_on_Researcher_Profile__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Researcher_Profile__c</fullName>
    <inlineHelpText>If this project is successful, would you like it displayed on your academic profile?
Researchers, set this to ‘Yes’, or ‘No’.  The Research Office will confirm if this is permitted by the funding agreement.</inlineHelpText>
    <label>Display On Academic Profile</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Not Specified</fullName>
            </value>
            <value>
                <fullName>Permitted by funding agreement (RO only)</fullName>
            </value>
            <value>
                <fullName>Not permitted by funding agreement (RO only)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>