force-app/main/default/objects/Project_Proposal__c/fields/Display_on_Researcher_Profile_Reason__c.field-meta.xml
<CustomField>
    <fullName>Display_on_Researcher_Profile_Reason__c</fullName>
    <inlineHelpText>Reason for not displaying on academic profile.</inlineHelpText>
    <label>Reason For Not Displaying</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client requested confidentiality</fullName>
            </value>
            <value>
                <fullName>Researcher requested confidentiality</fullName>
            </value>
            <value>
                <fullName>Under embargo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>