force-app/main/default/objects/Project_Proposal__c/fields/Does_this_involve_a_clinical_trial__c.field-meta.xml
<CustomField>
    <fullName>Does_this_involve_a_clinical_trial__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Does this involve a clinical trial?</label>
    <type>Checkbox</type>
</CustomField>