force-app/main/default/objects/Project_Proposal__c/fields/EOI_Date__c.field-meta.xml
<CustomField>
    <fullName>EOI_Date__c</fullName>
    <label>Date Proposal Initiated</label>
    <type>Date</type>
</CustomField>