force-app/main/default/objects/Project_Proposal__c/fields/Funding_Body_Client_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Funding_Body_Client_Reference_Number__c</fullName>
    <label>Funding Body/Client Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>