force-app/main/default/objects/Project_Proposal__c/fields/Funding_Body_Contact__c.field-meta.xml
<CustomField>
    <fullName>Funding_Body_Contact__c</fullName>
    <label>Funder Contact</label>
    <length>255</length>
    <type>Text</type>
</CustomField>