force-app/main/default/objects/Project_Proposal__c/fields/GMO_Additional_Approval__c.field-meta.xml
<CustomField>
    <fullName>GMO_Additional_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Additional GMO approval required?</label>
    <type>Checkbox</type>
</CustomField>