force-app/main/default/objects/Project_Proposal__c/fields/GMO_Approval__c.field-meta.xml
<CustomField>
    <fullName>GMO_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing GMO approval?</label>
    <type>Checkbox</type>
</CustomField>