force-app/main/default/objects/Project_Proposal__c/fields/GMO_Approval_Date__c.field-meta.xml
<CustomField>
    <fullName>GMO_Approval_Date__c</fullName>
    <label>Date by when GMO approval is required?</label>
    <type>Date</type>
</CustomField>