force-app/main/default/objects/Project_Proposal__c/fields/Grant_ID_s_CI_is_associated_to__c.field-meta.xml
<CustomField>
    <fullName>Grant_ID_s_CI_is_associated_to__c</fullName>
    <label>Grant ID&apos;s CI is associated to</label>
    <length>255</length>
    <type>Text</type>
</CustomField>