force-app/main/default/objects/Project_Proposal__c/fields/HEC_Approved__c.field-meta.xml
<CustomField>
    <fullName>HEC_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Existing HEC Approval</label>
    <type>Checkbox</type>
</CustomField>