force-app/main/default/objects/Project_Proposal__c/fields/I_RS_Project_Duration_In_Years__c.field-meta.xml
<CustomField>
    <fullName>I_RS_Project_Duration_In_Years__c</fullName>
    <formula>IF(ISBLANK(Project_End_Date__c) , 7, ((YEAR( Project_End_Date__c ) - YEAR(Project_Start_Date__c )) + 1))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Duration In Years</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>