force-app/main/default/objects/Project_Proposal__c/fields/Internal_Date__c.field-meta.xml
<CustomField>
    <fullName>Internal_Date__c</fullName>
    <label>Internal Date</label>
    <type>Date</type>
</CustomField>