force-app/main/default/objects/Project_Proposal__c/fields/IP_Position__c.field-meta.xml
<CustomField>
    <fullName>IP_Position__c</fullName>
    <inlineHelpText>Nominate preferred position toward ownership of intellectual property created under the project (Project IP). If Project IP is owned by the other party, we can request rights to use the Project IP. This may change upon Agreement finalisation.</inlineHelpText>
    <label>IP Position</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Owned by My Uni</fullName>
            </value>
            <value>
                <fullName>Jointly owned</fullName>
            </value>
            <value>
                <fullName>Owned by other organisation with rights for My Uni to use for research and teaching</fullName>
            </value>
            <value>
                <fullName>Owned by other organisation – no rights to My Uni to use</fullName>
            </value>
            <value>
                <fullName>Owned by JCU</fullName>
                <isActive>false</isActive>
                <label>Owned by JCU</label>
            </value>
            <value>
                <fullName>Owned by other organisation with rights for JCU to use for research and teaching</fullName>
                <isActive>false</isActive>
                <label>Owned by other organisation with rights for JCU to use for research and teaching</label>
            </value>
            <value>
                <fullName>Owned by other organisation – no rights to JCU to use</fullName>
                <isActive>false</isActive>
                <label>Owned by other organisation – no rights to JCU to use</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>