force-app/main/default/objects/Project_Proposal__c/fields/LeadChiefInvestigator__c.field-meta.xml
<CustomField>
    <fullName>LeadChiefInvestigator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead Chief Investigator*</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Project_Proposals1</relationshipName>
    <type>Lookup</type>
</CustomField>