force-app/main/default/objects/Project_Proposal__c/fields/Left_Over_Funds_Treatment__c.field-meta.xml
<CustomField>
    <fullName>Left_Over_Funds_Treatment__c</fullName>
    <inlineHelpText>Nominate whether left over funds are to be transferred to your outside earnings account/WBS or a nominated account/WBS as per your School or Centre&apos;s policy.</inlineHelpText>
    <label>Left Over Funds Treatment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Returned to client/funding body</fullName>
            </value>
            <value>
                <fullName>Transferred to outside earnings account</fullName>
            </value>
            <value>
                <fullName>Transferred to nominated account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>