force-app/main/default/objects/Project_Proposal__c/fields/Legal_Reference_Number__c.field-meta.xml
<CustomField>
    <fullName>Legal_Reference_Number__c</fullName>
    <label>Legal Reference Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>