force-app/main/default/objects/Project_Proposal__c/fields/Long_Project_Title__c.field-meta.xml
<CustomField>
    <fullName>Long_Project_Title__c</fullName>
    <label>Long Project Title</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>