force-app/main/default/objects/Project_Proposal__c/fields/Make_a_Chatter_Post__c.field-meta.xml
<CustomField>
    <fullName>Make_a_Chatter_Post__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Make a Chatter Post</label>
    <type>Checkbox</type>
</CustomField>