force-app/main/default/objects/Project_Proposal__c/fields/Max_SEO_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Max_SEO_Percentage__c</fullName>
    <label>Max SEO Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>