force-app/main/default/objects/Project_Proposal__c/fields/My_Uni_ID__c.field-meta.xml
<CustomField>
    <fullName>My_Uni_ID__c</fullName>
    <label>My Uni ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>