force-app/main/default/objects/Project_Proposal__c/fields/Number_of_Completed_Milestones__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Completed_Milestones__c</fullName>
    <label>Number of Completed Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>