force-app/main/default/objects/Project_Proposal__c/fields/Number_of_Overdue_Milestone_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Overdue_Milestone_Tasks__c</fullName>
    <label>Number of Overdue Milestone Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>