force-app/main/default/objects/Project_Proposal__c/fields/NumberofComplete_Finance_Milestones__c.field-meta.xml
<CustomField>
    <fullName>NumberofComplete_Finance_Milestones__c</fullName>
    <label>Number of Complete Finance Milestones</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>