force-app/main/default/objects/Project_Proposal__c/fields/Pitch_Session_Date__c.field-meta.xml
<CustomField>
    <fullName>Pitch_Session_Date__c</fullName>
    <label>Pitch Session Date</label>
    <type>Date</type>
</CustomField>