force-app/main/default/objects/Project_Proposal__c/fields/Previous_Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Previous_Project_Code__c</fullName>
    <label>Previous Project Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>