force-app/main/default/objects/Project_Proposal__c/fields/Primary_FOR_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Primary_FOR_Percentage__c</fullName>
    <label>Primary FOR Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>