force-app/main/default/objects/Project_Proposal__c/fields/Project_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Closure_Date__c</fullName>
    <label>Project Closure Date</label>
    <type>Date</type>
</CustomField>