force-app/main/default/objects/Project_Proposal__c/fields/Project_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_Code__c</fullName>
    <label>Project Code</label>
    <length>18</length>
    <type>Text</type>
</CustomField>