force-app/main/default/objects/Project_Proposal__c/fields/Project_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_End_Date__c</fullName>
    <inlineHelpText>The estimated expected project end date.</inlineHelpText>
    <label>Project End Date</label>
    <type>Date</type>
</CustomField>