force-app/main/default/objects/Project_Proposal__c/fields/Project_Proposal_Number__c.field-meta.xml
<CustomField>
    <fullName>Project_Proposal_Number__c</fullName>
    <displayFormat>PP-{000000000}</displayFormat>
    <label>Project Proposal Number</label>
    <type>AutoNumber</type>
</CustomField>